[gd_scene load_steps=9 format=3 uid="uid://cedcb7jly7jfc"]

[ext_resource type="Script" path="res://hangman.gd" id="1_2odp1"]
[ext_resource type="Texture2D" uid="uid://d10jcj08maq0k" path="res://head_pic.png" id="1_aj0ej"]
[ext_resource type="Texture2D" uid="uid://cic0h3vrasynr" path="res://body.png" id="2_q8mmj"]
[ext_resource type="Texture2D" uid="uid://ct7a4u0747h16" path="res://l_arm.png" id="3_yqs7l"]
[ext_resource type="Texture2D" uid="uid://dqopv7me6t88l" path="res://r_arm.png" id="4_okj6u"]
[ext_resource type="Texture2D" uid="uid://dlsqvn0vbl2eb" path="res://l_leg.png" id="5_g0l5d"]
[ext_resource type="Texture2D" uid="uid://766w6xj6a1cw" path="res://hanghanghang.png" id="5_o35vu"]
[ext_resource type="Texture2D" uid="uid://cttoftad3w0pu" path="res://r_leg.png" id="6_1vdvb"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_2odp1")

[node name="al2" type="VBoxContainer" parent="."]
visible = false
offset_left = 123.0
offset_top = 200.0
offset_right = 243.0
offset_bottom = 651.0

[node name="N" type="Button" parent="al2"]
layout_mode = 2
text = "N"

[node name="O" type="Button" parent="al2"]
layout_mode = 2
text = "O"

[node name="P" type="Button" parent="al2"]
layout_mode = 2
text = "P"

[node name="Q" type="Button" parent="al2"]
layout_mode = 2
text = "Q"

[node name="R" type="Button" parent="al2"]
layout_mode = 2
text = "R"

[node name="S" type="Button" parent="al2"]
layout_mode = 2
text = "S"

[node name="T" type="Button" parent="al2"]
layout_mode = 2
text = "T"

[node name="U" type="Button" parent="al2"]
layout_mode = 2
text = "U"

[node name="V" type="Button" parent="al2"]
layout_mode = 2
text = "V"

[node name="W" type="Button" parent="al2"]
layout_mode = 2
text = "W"

[node name="X" type="Button" parent="al2"]
layout_mode = 2
text = "X"

[node name="Y" type="Button" parent="al2"]
layout_mode = 2
text = "Y
"

[node name="Z" type="Button" parent="al2"]
layout_mode = 2
text = "Z"

[node name="al1" type="VBoxContainer" parent="."]
visible = false
offset_top = 200.0
offset_right = 115.0
offset_bottom = 651.0

[node name="A" type="Button" parent="al1"]
layout_mode = 2
text = "A"

[node name="B" type="Button" parent="al1"]
layout_mode = 2
text = "B"

[node name="C" type="Button" parent="al1"]
layout_mode = 2
text = "C
"

[node name="D" type="Button" parent="al1"]
layout_mode = 2
text = "D
"

[node name="E" type="Button" parent="al1"]
layout_mode = 2
text = "E"

[node name="F" type="Button" parent="al1"]
layout_mode = 2
text = "F"

[node name="G" type="Button" parent="al1"]
layout_mode = 2
text = "G"

[node name="H" type="Button" parent="al1"]
layout_mode = 2
text = "H"

[node name="I" type="Button" parent="al1"]
layout_mode = 2
text = "I
"

[node name="J" type="Button" parent="al1"]
layout_mode = 2
text = "J"

[node name="K" type="Button" parent="al1"]
layout_mode = 2
text = "K"

[node name="L" type="Button" parent="al1"]
layout_mode = 2
text = "L"

[node name="M" type="Button" parent="al1"]
layout_mode = 2
text = "M"

[node name="head" type="TextureRect" parent="."]
visible = false
offset_left = 68.0
offset_top = 24.0
offset_right = 136.0
offset_bottom = 97.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_aj0ej")

[node name="body" type="TextureRect" parent="."]
visible = false
offset_left = 63.0
offset_top = 48.0
offset_right = 131.0
offset_bottom = 121.0
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_q8mmj")

[node name="l_arm" type="TextureRect" parent="."]
visible = false
offset_left = 58.0
offset_top = 50.0
offset_right = 126.0
offset_bottom = 123.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_yqs7l")

[node name="r_arm" type="TextureRect" parent="."]
visible = false
offset_left = 80.0
offset_top = 50.0
offset_right = 148.0
offset_bottom = 123.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_okj6u")

[node name="l_leg" type="TextureRect" parent="."]
visible = false
offset_left = 60.0
offset_top = 80.0
offset_right = 128.0
offset_bottom = 153.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_g0l5d")

[node name="r_leg" type="TextureRect" parent="."]
visible = false
offset_left = 80.0
offset_top = 80.0
offset_right = 148.0
offset_bottom = 153.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_1vdvb")

[node name="hanghanghang" type="TextureRect" parent="."]
offset_left = 77.0
offset_top = -5.0
offset_right = 246.0
offset_bottom = 252.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_o35vu")

[node name="word_empty" type="Label" parent="."]
offset_left = 30.0
offset_top = 110.0
offset_right = 93.0
offset_bottom = 136.0
scale = Vector2(3, 3)
text = "_ _ _ _ _ _"

[node name="word1" type="Label" parent="."]
offset_left = 35.0
offset_top = 145.0
offset_right = 50.0
offset_bottom = 171.0
vertical_alignment = 1

[node name="word2" type="Label" parent="."]
offset_left = 68.0
offset_top = 145.0
offset_right = 83.0
offset_bottom = 171.0

[node name="word3" type="Label" parent="."]
offset_left = 100.0
offset_top = 145.0
offset_right = 115.0
offset_bottom = 171.0

[node name="word4" type="Label" parent="."]
offset_left = 134.0
offset_top = 145.0
offset_right = 149.0
offset_bottom = 171.0

[node name="word5" type="Label" parent="."]
offset_left = 167.0
offset_top = 145.0
offset_right = 182.0
offset_bottom = 171.0

[node name="word6" type="Label" parent="."]
offset_left = 200.0
offset_top = 145.0
offset_right = 215.0
offset_bottom = 170.0

[node name="play" type="Button" parent="."]
offset_left = 58.0
offset_top = 28.0
offset_right = 109.0
offset_bottom = 59.0
text = "PLAY!"

[node name="result_shown" type="Label" parent="."]
offset_left = 180.0
offset_top = 36.0
offset_right = 220.0
offset_bottom = 59.0

[connection signal="pressed" from="al2/N" to="." method="_on_n_pressed"]
[connection signal="pressed" from="al2/O" to="." method="_on_o_pressed"]
[connection signal="pressed" from="al2/P" to="." method="_on_p_pressed"]
[connection signal="pressed" from="al2/Q" to="." method="_on_q_pressed"]
[connection signal="pressed" from="al2/R" to="." method="_on_r_pressed"]
[connection signal="pressed" from="al2/S" to="." method="_on_s_pressed"]
[connection signal="pressed" from="al2/T" to="." method="_on_t_pressed"]
[connection signal="pressed" from="al2/U" to="." method="_on_u_pressed"]
[connection signal="pressed" from="al2/V" to="." method="_on_v_pressed"]
[connection signal="pressed" from="al2/W" to="." method="_on_w_pressed"]
[connection signal="pressed" from="al2/X" to="." method="_on_x_pressed"]
[connection signal="pressed" from="al2/Y" to="." method="_on_y_pressed"]
[connection signal="pressed" from="al2/Z" to="." method="_on_z_pressed"]
[connection signal="pressed" from="al1/A" to="." method="_on_a_pressed"]
[connection signal="pressed" from="al1/B" to="." method="_on_b_pressed"]
[connection signal="pressed" from="al1/C" to="." method="_on_c_pressed"]
[connection signal="pressed" from="al1/D" to="." method="_on_d_pressed"]
[connection signal="pressed" from="al1/E" to="." method="_on_e_pressed"]
[connection signal="pressed" from="al1/F" to="." method="_on_f_pressed"]
[connection signal="pressed" from="al1/G" to="." method="_on_g_pressed"]
[connection signal="pressed" from="al1/H" to="." method="_on_h_pressed"]
[connection signal="pressed" from="al1/I" to="." method="_on_i_pressed"]
[connection signal="pressed" from="al1/J" to="." method="_on_j_pressed"]
[connection signal="pressed" from="al1/K" to="." method="_on_k_pressed"]
[connection signal="pressed" from="al1/L" to="." method="_on_l_pressed"]
[connection signal="pressed" from="al1/M" to="." method="_on_m_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
